# templateprojectwev

./: .gitignore  CMakeLists.txt  EnironVariables.txt  GetVSEnironmentVariables.bat  OpenQTCreatorHere.bash  OpenQTCreatorHere.bat  initModule.bash  modulefullbuild.bash  modulefullbuild.bat  modulefullclean.bash  modulefullclean.bat  ourcolcon.bash  ourcolcon.bat  oursource.bash
CGensaveFiles/cmakeGui/GenericConfig/: UserCmakeCommand.xml  cgenCmakeCache.cmake
cmake/: bla.cmake
config/: AOConfig.cmake  DepNames.cmake  Targets.cmake  module_name.cmake  module_name_dep.cmake  templateprojectwev.cs
include/templateproject234wev_cp/: Config.hpp
install_lin/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install_lin/templateprojectwev_cp/include/MyQtHeaders/: main_window.hpp
install_lin/templateprojectwev_cp/share/ament_index/resource_index/package_run_dependencies/: templateprojectwev_cp
install_lin/templateprojectwev_cp/share/templateprojectwev_cp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install_lin/templateprojectwev_cp/share/templateprojectwev_cp/cmake/: ament_cmake_export_targets-extras.cmake  export_templateprojectwev_CPPlibExport-debug.cmake  export_templateprojectwev_CPPlibExport.cmake  templateprojectwev_cpConfig.cmake
lib/templateprojectwev_cp/: defaultTest
presetup/: CMakeLists.txt
presetup/install/: setup.bash  setup.ps1
presetup/install/just_a_setup/share/just_a_setup/: package.bash
presetup/install_win/: setup.bat
rosqt/: .gitignore  CMakeLists.txt  OpenQTCreatorHere.bash  OpenQTCreatorHere.bat  ourcolcon.bat  oursource.bash  oursource.bat  out.cereal  parameterFile.cfg  test.sh
rosqt/CGensaveFiles/: SavedOptions.txt
rosqt/CGensaveFiles/cmakeGui/GenericConfig/: cgenCmakeCache.cmake  cgenCmakeConfigNEXT.txt
rosqt/IF/: CMakeLists.txt  InterfaceTargets.cmake  fullclean.bash  fullclean.bat  ourcolcon.bash  package.xml.bak
rosqt/IF/CGensaveFiles/cmakeGui/GenericConfig/: cgenCmakeConfigNEXT.txt
rosqt/IF/include/world2_i/: Config.hpp  visibility_control.h
rosqt/IF/install_lin/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosqt/IF/install_lin/templateprojectwev_i/share/ament_index/resource_index/package_run_dependencies/: templateprojectwev_i
rosqt/IF/install_lin/templateprojectwev_i/share/templateprojectwev_i/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rosqt/IF/install_lin/templateprojectwev_i/share/templateprojectwev_i/cmake/: ament_cmake_export_dependencies-extras.cmake  templateprojectwev_iConfig.cmake
rosqt/Launches/: TestLaunchFile.QRL  TestLaunchSur.QRL  TestWorldStress.QRL
rosqt/Launches/Bash/: world_my_exe_for_my_node_WorldNode.bash  world_my_exe_for_node_WorldNode.bash  world_test_fake_world_exe_Rock1.bash
rosqt/config/: AOConfig.cmake  AOSelection.txt  DepNames.cmake  Targets.cmake
rosqt/config/AllAOSettings/: defaultsettings.cereal
rosqt/include/templateproject234wev_rqt/: Config.hpp
rosqt/install_lin/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosqt/install_lin/templateprojectwev_rqt/lib/templateprojectwev_rqt/: defaultTestRos
rosqt/install_lin/templateprojectwev_rqt/share/ament_index/resource_index/package_run_dependencies/: templateprojectwev_rqt
rosqt/install_lin/templateprojectwev_rqt/share/ament_index/resource_index/parent_prefix_path/: templateprojectwev_rqt
rosqt/install_lin/templateprojectwev_rqt/share/templateprojectwev_rqt/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rosqt/install_lin/templateprojectwev_rqt/share/templateprojectwev_rqt/cmake/: ament_cmake_export_targets-extras.cmake  export_templateprojectwev_ROSlibExport-debug.cmake  export_templateprojectwev_ROSlibExport.cmake  templateprojectwev_rqtConfig.cmake
rosqt/presetup/: README.txt
rosqt/presetup/install/: local_setup.sh  setup.bat  setup.sh  setup.zsh
rosqt/presetup/install/just_a_setup/share/just_a_setup/: package.zsh
rosqt/presetup/install_win/: setup.ps1
rosqt/resources/: button.qrc
rosqt/src/: defaultTestRos_QRmain.cpp
rosqt/ui/: main_window.ui
src/: defaultTest_QRmain.cpp
src/MyQtSrcs/: main_window.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/: default_tests.h
unit_tests/src/: main.cpp
